--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "description": "",
   "dependencies": {
     "@lmstudio/sdk": "^0.4.2",
-    "cli-progress": "^3.12.0"
+    "body-parser": "^1.20.3",
+    "cli-progress": "^3.12.0",
+    "cors": "^2.8.5",
+    "express": "^4.21.2"
   }
 }
